--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "main": "./dist/init.js",
   "types": "./dist/init.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
   "scripts": {
     "build": "tsc && cp -r src/templates dist/templates",
